[package]
name = "yz-pration"
description = "rational numbers based on prime powers"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
num-traits = "0.2"
once_cell = "1.8"
trait-set = "0.2"
primes = "0.3"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]
optional = true

[dev-dependencies]
proptest = "1.0"
